--- a/terapeuta/static/css/historial_sesiones.css
+++ b/terapeuta/static/css/historial_sesiones.css
@@ -144,3 +144,78 @@
 .btn-ver-grafico i {
   margin-left: 5px;
 }
+
+/*----------------- grafico ----------------------- */
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  overflow: auto;
+}
+
+.contenido-modal {
+  display: flex;
+  padding: 20px;
+  background-color: #fefefe;
+  flex-direction: column;
+  gap: 1.25rem;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border-radius: 10px;
+  width: 900px;
+  height: 400px;
+  margin: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#chart_sesion {
+  width: 100%;
+  height: 400px;
+}
+
+.close {
+  position: absolute;
+  top: 10px;
+  right: 25px;
+  color: #aaa;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+  z-index: 2;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+  .contenido-modal {
+      width: 600px;
+      height: 400px;
+  }
+  
+  #chart_sesion {
+      width: 100%;
+      height: 300px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .contenido-modal {
+      width: 475px;
+      height: 400px;
+  }
+}
