--- a/recepcionista/static/css/listar_pacientes_recepcionista.css
+++ b/recepcionista/static/css/listar_pacientes_recepcionista.css
@@ -131,6 +131,13 @@
     background-color: #535c83;
 }
 
+.filtro-activo {
+    font-weight: 600;
+    background-color: #d4edda; /* Fondo verde claro */
+    border-radius: 4px; /* Bordes redondeados */
+    padding: 5px;
+}
+
 .filtro-eliminar-container {
     margin-left: 20px;
 }
@@ -378,4 +385,25 @@ input[type="checkbox"] {
     border-radius: 5px;
     font-size: 14px;
     cursor: pointer;
+}
+
+@media screen and (max-width: 1200px){
+    .final-tabla a img {
+        width: 30px;
+        height: 30px;
+    }
+}
+
+@media screen and (max-width: 768px){
+    .final-tabla a img {
+        width: 25px;
+        height: 25px;
+    }
+}
+
+@media screen and (max-width: 600px){
+    .final-tabla a img {
+        width: 20px;
+        height: 20px;
+    }
 }
