--- a/recepcionista/static/css/recepcionista_terapeutas_activos.css
+++ b/recepcionista/static/css/recepcionista_terapeutas_activos.css
@@ -103,6 +103,17 @@
     gap: 10px;
 }
 
+.filtro-btn:hover {
+    background-color: #535c83;
+}
+
+.filtro-activo {
+    font-weight: 600;
+    background-color: #d4edda; /* Fondo verde claro */
+    border-radius: 4px; /* Bordes redondeados */
+    padding: 5px;
+}
+
 .filtro-eliminar-container {
     margin-left: 20px;
 }
@@ -252,4 +263,25 @@
     border-radius: 5px;
     font-size: 14px;
     cursor: pointer;
+}
+
+@media screen and (max-width: 1200px){
+    .final-tabla a img {
+        width: 30px;
+        height: 30px;
+    }
+}
+
+@media screen and (max-width: 768px){
+    .final-tabla a img {
+        width: 25px;
+        height: 25px;
+    }
+}
+
+@media screen and (max-width: 600px){
+    .final-tabla a img {
+        width: 20px;
+        height: 20px;
+    }
 }
