--- a/ortesisWeb/templates/administrador_base.html
+++ b/ortesisWeb/templates/administrador_base.html
@@ -48,7 +48,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="{% url 'admin_recepcionistas' %}" class="{% if request.path == '/recepcionistas/' %}active{% endif %}">
+                    <a href="{% url 'listar_recepcionistas_activos' %}" class="{% if request.path == '/recepcionistas/' %}active{% endif %}">
                             <img src="{% static 'icons/Vector.svg' %}" alt="Listado Recepcionistas">
                             Recepcionistas
                     </a>
